--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -1,4 +1,14 @@
 eclipse.preferences.version=1
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.1149150179/PATH/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.1149150179/PATH/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.1149150179/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin${PathDelimiter}${PATH}
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.1149150179/append=true
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.1149150179/appendContributed=false
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668/PATH/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668/PATH/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin${PathDelimiter}${PATH}
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668/append=true
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668/appendContributed=false
 environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505/PATH/delimiter=\:
 environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505/PATH/operation=replace
 environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin${PathDelimiter}${PATH}
