--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -4,6 +4,11 @@ environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.203254
 environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.1149150179/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin${PathDelimiter}${PATH}
 environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.1149150179/append=true
 environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.1149150179/appendContributed=false
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668.979818236/PATH/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668.979818236/PATH/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668.979818236/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin${PathDelimiter}${PATH}
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668.979818236/append=true
+environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668.979818236/appendContributed=false
 environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668/PATH/delimiter=\:
 environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668/PATH/operation=replace
 environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin${PathDelimiter}${PATH}
