--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -1,21 +1,21 @@
 eclipse.preferences.version=1
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.1149150179/PATH/delimiter=\:
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.1149150179/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.1149150179/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin${PathDelimiter}${PATH}
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.1149150179/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.1149150179/appendContributed=false
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668.979818236/PATH/delimiter=\:
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668.979818236/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668.979818236/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin${PathDelimiter}${PATH}
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668.979818236/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668.979818236/appendContributed=false
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668/PATH/delimiter=\:
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin${PathDelimiter}${PATH}
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505.838140668/appendContributed=false
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505/PATH/delimiter=\:
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505/PATH/operation=replace
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin${PathDelimiter}${PATH}
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505/append=true
-environment/project/cdt.managedbuild.toolchain.gnu.cygwin.base.1601921899.2032547505/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.269166782.1153654394/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.269166782.1153654394/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.269166782.1153654394/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.269166782.1153654394/append=true
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.269166782.1153654394/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.269166782.244871236/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.269166782.244871236/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.269166782.244871236/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.269166782.244871236/append=true
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.269166782.244871236/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.269166782.763595056/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.269166782.763595056/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.269166782.763595056/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.269166782.763595056/append=true
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.269166782.763595056/appendContributed=false
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.269166782/PATH/delimiter=;
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.269166782/PATH/operation=replace
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.269166782/PATH/value=${workspace_loc}/../Tools/ba-elf-ba2/bin${PathDelimiter}${workspace_loc}/../Tools/cygwin/bin${PathDelimiter}${workspace_loc}/../bin
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.269166782/append=true
+environment/project/cdt.managedbuild.config.gnu.cross.exe.release.269166782/appendContributed=false
